--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
 </head>
 <body>
   <h1>hello world</h1>
+  <b>bold</b>
+  <i>italic</i> 
+  <del>deleted</del>
+  <p>Mon premier paragraphe</p>
+  <p>Mon deuxième paragraphe</p>
+
 </body>
 </html>
