add title attribute

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
   <i>italic</i> 
   <del>deleted</del>
   <p>Mon premier paragraphe</p>
-  <p>Mon deuxième paragraphe</p>
+  <p>Mon deuxième paragraphe</p>>
+  <h2 title="Ceci est un sous-titre">Bonjour a tous!</h2>a
 
-</body>
+
+
+</body>>
 </html>
