--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   <del>deleted</del>
   <p>Mon premier paragraphe</p>
   <p>Mon deuxième paragraphe</p>>
-  <h2 title="Ceci est un sous-titre">Bonjour a tous!</h2>a
+  <h2 title="Ceci est un sous-titre">Bonjour a tous!</h2>
+  <img src="assets/soa.jpg" alt="SOA" width="600px" height="400px" > 
+  
 
 
 
