--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <p>Mon deuxième paragraphe</p>>
   <h2 title="Ceci est un sous-titre">Bonjour a tous!</h2>
   <img src="assets/soa.jpg" alt="SOA" width="600px" height="400px" > 
-  
+  <a href="https://gomycode.tn/">Take me to GoMyCode's Website</a>
+
 
 
 
