--- a/index.html
+++ b/index.html
@@ -7,15 +7,20 @@
     <link rel="icon"  href="assets/twitter.png"  type="image/x-icon"/>
 </head>
 <body>
+    <a name="TopOfThePage"> </a>
   <h1>hello world</h1>
   <b>bold</b>
   <i>italic</i> 
   <del>deleted</del>
   <p>Mon premier paragraphe</p>
   <p>Mon deuxième paragraphe</p>>
+  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio optio sed, totam repudiandae commodi molestias odit. Aut exercitationem ex, perspiciatis iusto similique doloribus ea. Ratione excepturi blanditiis accusamus atque quos!</p>
+  
+  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam eius officia doloribus cupiditate commodi consequuntur consectetur esse aliquid nobis cumque dolore dolorem, odit non, blanditiis fuga ad quidem eligendi expedita!</p><p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sapiente, ducimus eos? Iure eveniet ipsum earum perferendis, harum ab adipisci, consectetur natus dolores corporis dolore itaque vero debitis autem. Sit, minus!</p>
   <h2 title="Ceci est un sous-titre">Bonjour a tous!</h2>
   <img src="assets/soa.jpg" alt="SOA" width="600px" height="400px" > 
   <a href="https://gomycode.tn/">Take me to GoMyCode's Website</a>
+  <a href="#TopOfThePage">take me to the top of the page</a>
 
 
 
