--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
   <img src="assets/soa.jpg" alt="SOA" width="600px" height="400px" > 
   <a href="https://gomycode.tn/">Take me to GoMyCode's Website</a>
   <a href="#TopOfThePage">take me to the top of the page</a>
+  <audio controls>
+    Please Check the audio ExtensionPlease Check the audio Extension
+  </audio>
 
 
 
