--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <a href="https://gomycode.tn/">Take me to GoMyCode's Website</a>
   <a href="#TopOfThePage">take me to the top of the page</a>
   <audio controls>
+    <source src="assets/sample.mp3" type="audio/mpeg">
     Please Check the audio ExtensionPlease Check the audio Extension
   </audio>
 
