--- a/index.html
+++ b/index.html
@@ -35,10 +35,42 @@
 
   src="https://www.youtube.com/embed/IMWwdX8-3Ks"
   ></iframe>
-  
-  
+
+  <ul type="square">
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>JS</li>
+  </ul>
+
+<ol type="I">
+  <li>HTML</li>
+    <li>CSS</li>
+    <li>JS</li>
+</ol>
+<dl>
+
+	<dt>House Stark</dt>
+
+	<dd>The Direwolf</dd>
 
 
 
+	<dt>House Lannister</dt>
+
+	<dd>The Lion</dd>
+
+
+
+	<dt>House Targaryen</dt>
+
+	<dd>The Three-Headed Dragon</dd>
+
+
+
+	<dt>House Baratheon</dt>
+
+	<dd>The Stag</dd>
+
+</dl>
 </body>>
 </html>
