--- a/index.html
+++ b/index.html
@@ -76,8 +76,42 @@
 <div>
   <h1>title</h1>
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis beatae est quia dolorem, eius laudantium magni quae sint maiores repudiandae hic incidunt iusto at omnis obcaecati ea sed magnam quam.
-    
+
   </p>
 </div>
+<table border="1">
+
+  <tr>
+
+    <th>HTML</th>
+
+    <th>CSS</th>
+
+    <th>JS</th>
+
+  </tr>
+
+  <tr>
+
+    <td>Paragraphs</td>
+
+    <td>Selectors</td>
+
+    <td>DOM</td>
+
+  </tr>
+
+  <tr>
+
+    <td>Tables</td>
+
+    <td>Styles</td>
+
+    <td>Elements</td>
+
+  </tr>
+
+</table>
+
 </body>>
 </html>
