--- a/index.html
+++ b/index.html
@@ -170,7 +170,27 @@
       <input type="submit"  value="Submit"  /> 
 
     </form> 
+    <form>
 
+      Search <input type = "text" name = "search"  /> 
+ 
+  </form> 
+  <select>
+
+    <option value="WebTrack">Web Track</option>
+
+    <option value="AITrack">AI Track</option>
+
+    <option value="GameTrack">Game Track</option>
+
+    <option value="DataScienceTrack">Data Science Track</option>
+
+  </select>
+  <textarea name="message" cols="30" rows="5">
+
+    Bienvenue sur GoMyCode
+
+</textarea> ;
 
 
 </body>>
