--- a/index.html
+++ b/index.html
@@ -191,6 +191,22 @@
     Bienvenue sur GoMyCode
 
 </textarea> ;
+<form>
+
+  <label>Prénom:</label>
+
+  <input type="text" name="ABDERAHMEN" />
+  Nom de famille:</label>
+
+  <input type="text" name="YOUSSFI" id="YOUSSFI"  />
+ <!-- Ce bouton soumettra le formulaire, entraînant la redirection de la page --> 
+
+ <button type="submit">Soumettre le nom</button>
+
+</form>
+
+  
+
 
 
 </body>>
