--- a/index.html
+++ b/index.html
@@ -204,6 +204,16 @@
  <button type="submit">Soumettre le nom</button>
 
 </form>
+<select>
+
+  <option value="WebTrack">Web Track</option>
+
+  <option value="AITrack">AI Track</option>
+
+  <option value="GameTrack">Game Track</option>
+
+  <option value="DataScienceTrack">Data Science Track</option>
+</select>
 
   
 
