--- a/index.html
+++ b/index.html
@@ -214,6 +214,32 @@
 
   <option value="DataScienceTrack">Data Science Track</option>
 </select>
+<textarea name="message" cols="30" rows="5">
+
+  Bienvenue sur GoMyCode
+
+</textarea> ;
+<form>
+
+  <label>Prénom:</label>
+
+  <input type="text" name="abderahmen" />
+
+  
+
+
+  Nom de famille:</label>
+
+  <input type="text" name="youssfi" id="youssfi"  />
+
+  
+
+
+  <!-- Ce bouton soumettra le formulaire, entraînant la redirection de la page --> 
+
+  <button type="submit">Soumettre le nom</button>
+
+</form>
 
   
 
